welcome.lessons.welcome.array.averagevalue.AverageValue.scala.error
averageValue:1: error: Missing closing brace `}' assumed here
def averageValue(nums:Array[Int]): Int = {
^averageValue:14: error: Missing closing brace `}' assumed here
}
^